<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pwd">Mot de passe</string>
    <string name="login">Identifiant</string>
    <string name="confirm">Confirmer</string>
    <string name="error_login">Identifiant ou mot de passe incorrect.</string>
    <string name="connecting">Connexion...</string>
    <string name="method">Choisissez votre méthode de validation du ticket pour la party</string>
    <string name="scan">Scanner QR code</string>
    <string name="manual">Saisie manuelle</string>
    <string name="validated">Le ticket a été validé avec succès!</string>
    <string name="error_customer">Erreur : Le client n\'a pas pu être trouvé pour ce ticket.</string>
     <string name="error_party">Erreur : ce QR code ne correspond pas à cette party.</string>
    <string name="error_checking">Erreur : le QR code a un mauvais format.</string>
    <string name="alreay_validated">Erreur : ce ticket a déjà été validé au préalable. Vérifiez l\'identitié du détenteur du ticket.</string>
    <string name="tickets_scanned">Tickets scannés pour la party</string>
    <string name="refresh">Rafraichir</string>

</resources>